Change background colour to white to prevent the grey 'footer' style area from jumping around page-to-page. Cosmetic change now that the footer has been removed.

--- a/pupil-spa/src/public/govuk_template/stylesheets/govuk-template.css
+++ b/pupil-spa/src/public/govuk_template/stylesheets/govuk-template.css
@@ -65,7 +65,7 @@ html {
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 1 */
-  background-color: #dee0e2; }
+  background-color: #fff; }
 
 /*
   Force the scrollbar to always display in IE10/11
