--- a/pupil-spa/src/public/styles/styles.css
+++ b/pupil-spa/src/public/styles/styles.css
@@ -1205,7 +1205,7 @@ html {
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 1 */
-  background-color: #dee0e2; }
+  background-color: #fff; }
 
 /*
   Force the scrollbar to always display in IE10/11
@@ -1738,7 +1738,7 @@ html {
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 1 */
-  background-color: #dee0e2; }
+  background-color: #fff; }
 
 /*
   Force the scrollbar to always display in IE10/11
